--- a/package.json
+++ b/package.json
@@ -65,5 +65,6 @@
     "gh-pages": "^3.2.3",
     "husky": "^7.0.0",
     "prettier": "^2.5.1"
-  }
+  },
+  "homepage": "https://ckychris.github.io/ethereum-boilerplate"
 }
