--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@maticnetwork/maticjs": "^3.2.2",
+    "@maticnetwork/maticjs-web3": "^1.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@toruslabs/openlogin": "^1.4.0",
     "@walletconnect/web3-provider": "^1.6.6",
+    "@web3auth/ethereum-provider": "^0.2.2",
     "antd": "^4.16.13",
     "magic-sdk": "7.0.0",
     "moralis": "^1.2.3",
@@ -18,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
     "web-vitals": "^1.0.1",
+    "web3": "^1.7.0",
     "yarn": "^1.22.17"
   },
   "scripts": {
