--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
+    "sanitize-html": "^2.7.0",
     "web-vitals": "^1.0.1",
     "web3": "^1.7.0",
     "yarn": "^1.22.17"
@@ -71,5 +72,8 @@
     "husky": "^7.0.0",
     "prettier": "^2.5.1"
   },
-  "homepage": "https://ckychris.github.io/ethereum-boilerplate"
+  "homepage": "https://ckychris.github.io/ethereum-boilerplate",
+  "resolutions": {
+    "react-error-overlay": "6.0.9"
+  }
 }
